static/css/general.css
@font-face {
  font-family: "Oxanium VF";
  src: url("/static/fonts/Oxanium/static/Oxanium-ExtraLight.ttf") format("truetype");
  font-weight: 200 800; 
  font-style: normal; 
  font-display: swap;
}

body {
  font-family: 'Oxanium VF', system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
  font-size: 16px;
  color: #032d31; 
  background-image: url('/static/images/dost-2-0-fk-landscape.jpg');
}

h4, h5, h6  {
  margin-top: 1.5em;
}

.center {
  margin-left: auto; 
  margin-right: auto;
  text-align: center;
}

.main {
  width: 50%;
  text-align: center;
  padding: 50px;
  margin-top: 1em;
  margin-bottom: 3em;

  transition: background-color 1s linear;
  background-color: rgba(255, 255, 255, 0.4);
  box-shadow: rgba(255, 255, 255, 0.35) 0px 7px 18px;
}

.main:hover {
  transition: background-color 1s linear;
  background-color: rgba(255, 255, 255, 0.8);
}
.main:focus-visible {
  transition: background-color 1s linear;
  background-color: rgba(255, 255, 255, 0.8);
}
.main_cleared {
  transition: background-color 1s linear;
  background-color: rgba(255, 255, 255, 0.8);
}

.ustyle {
  text-decoration: underline;
  display: inline-block;
  color: red;
}

 /* unvisited link */
a:link {
  color: #6a5e2b;
}

/* visited link */
a:visited {
  color: #0e3d37;
}

/* mouse over link */
a:hover {
  color: #e5e5e5;
}

/* selected link */
a:active {
  color: #e5e5e5;
}

.mail {
  color: #6a5e2b; 
  cursor: pointer;
}

.gesperrt {
  letter-spacing: 0.1em;
}

.small {
  font-size: 14px;
}

select {
  background: rgba(13, 13, 13, 0.7);
  color: #e5e5e5; 
  padding: 1em;
  padding-left: 2em;
  border: none;
}

.table-hint {
  font-size: 8px; 
  margin-left: 1em;
  float: right;
}

.char-hint {
  font-size: 12px; 
  margin-left: 1em;
}

.nav {
  float: right;
  margin-top: -2em;
  margin-left: -3em;
  column-gap: 0.5em;
}

.button-container {
  margin-bottom: 2em;
  display: flex; 
  column-gap: 1em;
  justify-content: center;
  font-size: small;
}

@media only screen and (max-width: 950px) {
  /* For mobile phones: */ 
  body {
    background-image: url('/static/images/dost-2-0-fk-portrait.jpg');
  }
  .main {
    padding: 20px;
    font-size: 14px;
    width: 95%;
  }
}

